--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,14 @@
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "prisma": "^6.7.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "prisma": "^6.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
