--- a/backend/package.json
+++ b/backend/package.json
@@ -14,21 +14,27 @@
     "@prisma/client": "^6.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^6.1.1",
+    "@types/joi": "^17.2.2",
+    "@types/streamifier": "^0.1.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
+    "streamifier": "^0.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "prisma": "^6.8.0",
+    "@types/multer": "^1.4.12",
+    "express": "^5.1.0",
+    "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
